--- a/hb-slide/style.css
+++ b/hb-slide/style.css
@@ -74,6 +74,7 @@ body {
 }
 
 .mobile-menu__btn {
+  position: relative;
   background-color: unset;
   border: none;
   outline: none;
@@ -86,6 +87,10 @@ body {
   height: 2px;
   display: block;
   margin-bottom: 9px;
+  -webkit-transition: -webkit-transform 0.7s;
+  transition: -webkit-transform 0.7s;
+  transition: transform 0.7s;
+  transition: transform 0.7s, -webkit-transform 0.7s;
 }
 
 .mobile-menu__btn > span:last-child {
@@ -113,6 +118,25 @@ body {
 .menu-open .mobile-menu__cover {
   opacity: 1;
   visibility: visible;
+}
+
+.menu-open .mobile-menu__btn > span {
+  background-color: #fff;
+}
+
+.menu-open .mobile-menu__btn > span:nth-child(1) {
+  -webkit-transform: translateY(11px) rotate(135deg);
+          transform: translateY(11px) rotate(135deg);
+}
+
+.menu-open .mobile-menu__btn > span:nth-child(2) {
+  -webkit-transform: translateX(-18px) scaleX(0);
+          transform: translateX(-18px) scaleX(0);
+}
+
+.menu-open .mobile-menu__btn > span:nth-child(3) {
+  -webkit-transform: translateY(-11px) rotate(-135deg);
+          transform: translateY(-11px) rotate(-135deg);
 }
 
 .menu-open .mobile-menu__item {
